update dtos folder structure for swagger and custom, update yml
