# src/api/items/controllers/item.admin.controller.ts
@@ -1,6 +1,6 @@
 import { Request, Response, NextFunction } from "express";
 import * as itemService from '../item.service.js';
-import { NewItemInput } from "../../../dtos/newItemInput.js";
+import { NewItemInput } from "../../../dtos/generated/newItemInput.js";
 
 export const createItem = async (req: Request, res: Response, next: NextFunction) => {
   try {
